--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,42 @@
-name: Node.js CI and Docker Build
+name: Build and Deploy Node.js Docker Image
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Runs the workflow when changes are pushed to the main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-      - uses: actions/checkout@v4  # Checkout the repository to access the code
-      
-      - name: Use Node.js ${{ matrix.node-version }}  # Set up the specified Node version
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}  # Use Node.js version from matrix
-          cache: 'npm'  # Cache npm dependencies for faster builds
+      - name: Checkout repository
+        uses: actions/checkout@v4
+         # 'actions/checkout@v2' is a pre-made action that checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
 
-      - run: npm ci  # Install dependencies based on package-lock.json
-      - run: npm run build --if-present  # Run build script if present in package.json
-      - run: npm test  # Run tests as defined in package.json
+      - name: Install dependencies
+        run: npm install
+         # 'npm install' installs the dependencies defined in your project's 'package.json' file.
+         
+      - name: Build
+        run: npm run build
+        # 'npm run build' runs the build script defined in your 'package.json'. This is typically used for compiling or preparing your code for deployment.
 
-      # Docker-related steps
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          version: latest
+
+      - name: Run tests
+        run: npm test
+        # 'npm test' runs the test script defined in your 'package.json'. It's crucial for ensuring that your code works as expected before deployment.
+
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v4
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build the Docker image
-        run: |
-          docker build . --file Dockerfile --tag github-actions:$(date +%s)
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/github-actions:v3 .
 
-      - name: Push the Docker image
-        run: |
-          docker push github-actions:$(date +%s)
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/github-actions:v3
 
